--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
     align-content: center;
     justify-content: space-around;
     /* box-shadow: 0 0 5px black; */
-    height:55px;
+    height: 55px;
 }
 
 #header1 {
@@ -57,7 +57,7 @@ img {
 }
 
 #index {
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 #logo_text img {
@@ -178,7 +178,7 @@ header a {
 }
 
 header ul li {
-    padding: 1%;
+    padding: 2px;
     /* width: 98%; */
     flex-grow: 1;
     display: flex;
@@ -820,7 +820,7 @@ p {
     background: linear-gradient(rgb(255, 159, 41), white);
     /* background-color: var(--orange); */
     color: rgb(0, 0, 0);
-    padding: 20px;
+    /* שינית כאןpadding: 20px; */
     width: 100vw;
     text-align: center;
     margin-top: 0;
@@ -1154,26 +1154,13 @@ td {
     }
 }
 
-
-
 header ul li li {
     font-size: 1.2rem;
     height: 12px;
 }
 
-.header_ul li {
-    width: 21vw;
-}
-
-/* 
-header {
-    width: 100vw;
-}
-
 .header_ul {
-    width: 100vw;
-}
+    padding: 0;
+    align-items: stretch;
 
-.li {
-    width: 20vw;
-} */
+}
